# bonsai

./: .dockerignore  .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  add_samples.sh  bootstrap.sh  build_dev_containers.sh  build_prod_containers.sh  cgviz.py  cgviz.wsgi  config.py  docker-compose.e2e_test.yml  docker-compose.ete_test.yml  docker-compose.markus.new.yml  docker-compose.yml  forms.py  phylogeny.py  requirements.txt  test.bash  test.phy  test_dev.bash  upload.sh  user.py
.github/: pull_request_template.md
allele_cluster_service/: Dockerfile  MANIFEST.in  README.md  setup.cfg
allele_cluster_service/allele_cluster_service/: __init__.py  config.py  ms_trees.py  tasks.py  worker.py
allele_cluster_service/app/: tasks.py  worker.py
allele_cluster_service/tests/: conftest.py  test_ms_tree_cluster.py
allele_cluster_service/tests/data/: mlst_different_profile.csv  mlst_same_profile.csv
api/: Dockerfile  pyproject.toml  run_mimer.py  setup.cfg  setup.py
api/app/: __init__.py  __version__.py  auth.py  cli.py  config.py  io.py  logging.ini  main.py  redis.py  utils.py
api/app/crud/: errors.py  group.py  location.py  minhash.py  sample.py  tags.py  user.py
api/app/db/: db.py  index.py  utils.py
api/app/extensions/: ldap_extension.py
api/app/internal/: cluster.py  middlewares.py
api/app/models/: __init__.py  antibiotics.py  auth.py  base.py  cluster.py  group.py  location.py  metadata.py  phenotype.py  qc.py  sample.py  tags.py  typing.py  user.py
api/app/redis/: __init__.py  allele_cluster.py  minhash.py  queue.py
api/app/routers/: __init__.py  auth.py  cluster.py  export.py  groups.py  jobs.py  locations.py  resources.py  samples.py  users.py
api/bonsai_api/: __version__.py  auth.py  cli.py  config.py  io.py  main.py  utils.py
api/bonsai_api/crud/: __init__.py  group.py  location.py  sample.py  tags.py  user.py
api/bonsai_api/db/: __init__.py  db.py  index.py  utils.py
api/bonsai_api/models/: base.py  cluster.py  group.py  qc.py  sample.py  tags.py  user.py
api/bonsai_api/redis/: __init__.py  allele_cluster.py  minhash.py  queue.py  ska.py
api/bonsai_api/routers/: __init__.py  auth.py  cluster.py  export.py  groups.py  jobs.py  locations.py  resources.py  root.py  samples.py  shared.py  users.py
api/tests/: conftest.py  test_cli.py  test_io.py
api/tests/data/: __init__.py  test_ecoli_1.json  test_mtuberculosis_1.json
frontend/: Dockerfile  MANIFEST.in  README.md  package-lock.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
frontend/app/: __version__.py  app.py  bonsai.py  config.py  custom_filters.py  extensions.py  models.py
frontend/app/blueprints/admin/: views.py
frontend/app/blueprints/admin/static/: admin.css
frontend/app/blueprints/admin/templates/: admin_panel.html  admin_panel_base.html  create_user.html  edit_users.html  user_form.html  users_list.html
frontend/app/blueprints/alignviewers/: __init__.py  controllers.py  partial.py  views.py
frontend/app/blueprints/alignviewers/templates/: igv_viewer.html  utils.html
frontend/app/blueprints/api/: views.py
frontend/app/blueprints/cluster/: __init__.py  views.py
frontend/app/blueprints/cluster/templates/: ms_tree.html  tree_sidebar.html
frontend/app/blueprints/comparison/: __init__.py  views.py
frontend/app/blueprints/groups/: __init__.py  views.py
frontend/app/blueprints/groups/static/: edit.css  edit_groups.js  group.css  groups.css  sampleTable.js
frontend/app/blueprints/groups/templates/: edit_groups.html  group.html  groups.html  shared.html
frontend/app/blueprints/login/: __init__.py  views.py
frontend/app/blueprints/login/templates/: login.html
frontend/app/blueprints/public/: views.py
frontend/app/blueprints/public/templates/: index.html
frontend/app/blueprints/sample/: __init__.py  controllers.py  views.py
frontend/app/blueprints/sample/static/: sample.css
frontend/app/blueprints/sample/templates/: cards.html  resistance_report.html  resistance_variants.html  sample.html  sample_layout.html  sidebar.html
frontend/app/templates/: bootstrap_base.html  layout.html  navbar.html
frontend/bonsai_app/: __init__.py  __version__.py  app.py  bonsai.py  config.py  custom_filters.py  extensions.py  models.py
frontend/bonsai_app/blueprints/admin/: __init__.py  views.py
frontend/bonsai_app/blueprints/admin/templates/: admin_panel.html  user_form.html
frontend/bonsai_app/blueprints/alignviewers/: __init__.py  controllers.py  views.py
frontend/bonsai_app/blueprints/alignviewers/templates/: igv_viewer.html  utils.html
frontend/bonsai_app/blueprints/api/: __init__.py  views.py
frontend/bonsai_app/blueprints/cluster/: __init__.py  views.py
frontend/bonsai_app/blueprints/cluster/templates/: tree_sidebar.html
frontend/bonsai_app/blueprints/comparison/: views.py
frontend/bonsai_app/blueprints/groups/: __init__.py  views.py
frontend/bonsai_app/blueprints/groups/static/: datatables.min.css  datatables.min.js  group.css  groups.css  sampleTable.js
frontend/bonsai_app/blueprints/groups/templates/: cell_fmt.html  edit_groups.html  group.html  groups.html  shared.html
frontend/bonsai_app/blueprints/login/: __init__.py  views.py
frontend/bonsai_app/blueprints/public/: __init__.py  views.py
frontend/bonsai_app/blueprints/sample/: __init__.py  controllers.py  views.py
frontend/bonsai_app/templates/: navbar.html
frontend/tests/: conftest.py  test_custom_filters.py
frontend/tests/blueprints/api/: test_api_views.py
minhash_service/: Dockerfile  README.md  pyproject.toml  setup.cfg
minhash_service/app/: config.py  minhash.py  tasks.py  worker.py
minhash_service/app/minhash/: cluster.py  io.py  similarity.py
minhash_service/minhash_service/: __init__.py  config.py  tasks.py  worker.py
minhash_service/minhash_service/minhash/: cluster.py  io.py  similarity.py
ska_service/: Dockerfile  README.md  pyproject.toml  setup.cfg
ska_service/ska_service/: __init__.py  config.py  tasks.py  worker.py
ska_service/ska_service/ska/: __init__.py  base.py  cluster.py  compare.py  index.py
(+305 files in other folders)
