[metadata]
name = allele clustering service
version = attr: allele_cluster_service.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
    console_scripts = cluster_service = allele_cluster_service.worker:create_app

[options]
packages = find:
zip_safe = True
include_package_data = False
python_requires = >=3.10
install_requires =
    setuptools
    wheel
    redis==5.01
    rq==1.15.1
    scipy
    pydantic
    numba
    numpy
    ete3
    networkx
    psutil
    six

[options.extras_require]
dev = 
    black
    isort
    mypy
