[metadata]
name = bonsai_api
version = attr: app.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
description = Bonsai REST api
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
    console_scripts = bonsai_api = app.cli:cli

[options]
packages = find:
zip_safe = True
include_package_data = False
python_requires = >=3.10
install_requires =
    setuptools
    wheel
    click
    motor
    fastapi[all]
    uvicorn[standard]
    python-jose[cryptography]
    python-multipart
    passlib
    ldap3
    pandas
    biopython
    scipy
    scikit-bio
    pydantic-factories
    grapetree
    redis
    rq

[options.extras_require]
dev = 
    black
    isort
    mypy
