[metadata]
name = bonsai_api
version = attr: app.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
description = Bonsai REST api
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
    console_scripts = bonsai_api = app.cli:cli

[options]
packages = find:
zip_safe = True
include_package_data = False
python_requires = >=3.10
install_requires =
    setuptools
    wheel
    uvicorn[standard]
    click==8.1.7
    fastapi[all]==0.104.1
    python-jose[cryptography]==3.3.0
    python-multipart==0.0.6
    passlib==1.7.4
    bcrypt==4.1.1
    ldap3==2.9.1
    pandas==2.1.3
    redis==5.0.1
    rq==1.15.1
    motor==3.3.2
    pymongo==4.5.0
    jasen-prp @ git+https://github.com/Clinical-Genomics-Lund/bonsai-prp.git@v0.2.0#egg=jasen-prp
[options.extras_require]
dev = 
    black
    isort
    mypy
