[metadata]
name = bonsai_api
version = attr: app.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
description = Bonsai REST api
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
console_scripts = bonsai_api = app.cli:cli

[options]
packages = find:
zip_safe = True
include_package_data = False
python_requires = >=3.10
install_requires =
    setuptools
    wheel
    uvicorn[standard]==0.25.0
    click==8.1.7
    fastapi[all]==0.108.0
    python-jose[cryptography]==3.3.0
    python-multipart==0.0.6
    passlib==1.7.4
    bcrypt==4.1.1
    ldap3==2.9.1
    pandas==2.1.3
    redis
    rq==1.16.1
    motor==3.3.2
    pymongo==4.5.0
    bonsai-prp==0.6.0

[options.extras_require]
dev = 
    black
    isort
    mypy
    pytest
    pytest-asyncio
    pytest-mock
    mongomock
    mongomock-motor

[tool:pytest]
asyncio_mode=auto
