[metadata]
name = bonsai_app
version = attr: bonsai_app.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = False
python_requires = >=3.10
install_requires =
    setuptools
    wheel
    Flask <= 2.3.3
    werkzeug <= 2.3.7
    wtforms[email]
    gunicorn
    flask-login
    requests
    pydantic
    python-dateutil
    pydantic-factories
    jsonpath2
    pydantic-settings

[options.extras_require]
dev = 
    black
    isort
    mypy
