[metadata]
name = minhash_service
version = attr: minhash_service.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
    console_scripts = minhash_service = minhash_service.worker:create_app

[options]
packages = find:
zip_safe = True
include_package_data = False
python_requires = >=3.10
install_requires =
    setuptools
    wheel
    redis==5.01
    rq==1.15.1
    sourmash==4.8.6
    fasteners==0.19
    pydantic==2.5.2

[options.extras_require]
dev = 
    black
    isort
    mypy
