[metadata]
name = ska_service
version = attr: ska_service.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
    console_scripts = ska_service = ska_service.worker:create_app

[options]
packages = find:
zip_safe = True
include_package_data = False
python_requires = >=3.10
install_requires =
    setuptools
    wheel
    redis
    rq==1.16.1
    pydantic==2.9.0
    pydantic-settings==2.6.1
    pandas==2.2.3
    scipy==1.14.1
    biopython==1.84

[options.extras_require]
dev = 
    black
    isort
    mypy
